fixed spacing between elements on 320, 880, & 1280 width

--- a/blocks/card.css
+++ b/blocks/card.css
@@ -55,8 +55,5 @@
   .card {
     justify-content: center;
     flex-direction: column;
-    overflow: hidden;
-    text-overflow: ellipsis;
-    white-space: nowrap;
   }
 }
