--- a/blocks/footer.css
+++ b/blocks/footer.css
@@ -18,22 +18,15 @@
 
 @media screen and (min-width: 320px) and (max-width: 768px) {
   .footer__copyright {
-    width: 282px;
-    height: 14px;
     display: flex;
     justify-content: center;
     font-family: Inter, Arial, sans-serif;
-    font-style: normal;
-    font-weight: 400;
-    font-size: 14px;
     line-height: 17px;
     padding-bottom: 36px;
   }
 }
 @media screen and (min-width: 768px) and (max-width: 1280px) {
   .footer__copyright {
-    width: 318px;
-    height: 18px;
-    margin-left: 200px;
+    margin-left: 150px;
   }
 }
