--- a/blocks/header.css
+++ b/blocks/header.css
@@ -2,18 +2,16 @@
   margin-top: 45px;
   padding-bottom: 41px;
   border-bottom: 1px solid #545454;
-  border-color: rgba(255, 255, 255, 0.7);
+  border-color: rgba(84, 84, 84, 0.7);
 }
 
 @media screen and (min-width: 320px) and (max-width: 760px) {
   .header {
-    padding: 45px 0 0 0;
+    display: flex;
+    height: 24px;
     width: 320px;
-    height: 56px;
-    margin-left: 27px;
-    margin-bottom: 38px;
+    margin-top: 28px;
     padding-bottom: 32px;
-    border-color: rgba(84, 84, 84, 0.7);
   }
 }
 @media screen and (min-width: 768px) and (max-width: 1275px) {
@@ -22,6 +20,5 @@
     padding: 41px 0 0 0;
     margin-left: 30px;
     padding-bottom: 32px;
-    border-color: rgba(84, 84, 84, 0.7);
   }
 }
