--- a/blocks/page.css
+++ b/blocks/page.css
@@ -24,6 +24,8 @@
     flex-direction: column;
   }
   .page__content {
+  }
+  .page__section {
     width: calc(100% - 38px);
     max-width: 880px;
     margin-right: 30px;
