--- a/blocks/profile.css
+++ b/blocks/profile.css
@@ -12,7 +12,6 @@
 .profile__info {
   display: grid;
   grid-template-areas: "title button" "description description";
-  grid-template-columns: minmax(auto, 373px) auto;
 }
 .profile__edit-button {
   background: transparent url(../images/edit-icon.svg) center no-repeat;
@@ -84,18 +83,8 @@
     width: 168.75px;
   }
   .profile__description {
-    grid-template-columns: 1fr 1fr 1fr 55px;
-    grid-template-rows: auto;
-    grid-template-areas:
-      "image image image image"
-      "title title title title"
-      "subtitle subtitle subtitle subtitle"
-      "add add add add";
     justify-self: center;
     font-size: 14px;
-    text-overflow: ellipsis;
-    white-space: nowrap;
-    overflow: hidden;
     margin-top: 14px;
     margin-bottom: 36px;
   }
@@ -105,7 +94,6 @@
     height: 127.5px;
   }
   .profile__title {
-    margin-left: 62px;
     font-size: 22px;
     padding-top: 26.25px;
     width: 196px;
@@ -119,19 +107,15 @@
   }
   .profile__add-button {
     width: 282px;
-    height: 50px;
     margin-left: 19px;
-    box-sizing: border-box;
-    border: 2px solid #ffffff;
-    border-radius: 2px;
+    margin-right: 19px;
   }
 }
 @media screen and (min-width: 768px) and (max-width: 1275px) {
   .profile {
     padding: 40px 0 51px 0;
     width: 880px;
-    margin-left: 19px;
-    margin-right: 19px;
+    margin-left: 90px;
   }
   .profile__add-button {
     margin-right: 19px;
